--- a/netx-transport/pom.xml
+++ b/netx-transport/pom.xml
@@ -12,16 +12,15 @@
     <artifactId>netx-transport</artifactId>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/io.netty/netty-common -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-buffer</artifactId>
+            <version>4.1.45.Final</version>
+        </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-common</artifactId>
             <version>4.1.45.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>io.netx</groupId>
-            <artifactId>netx-buffer</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
